--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
@@ -4,6 +4,10 @@
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
   <specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <unitTestProvider name="NUnit" />
+    <plugins>
+      <add name="Ghpr" path="..\packages\Ghpr.SpecFlowPlugin.0.0.1\lib\net452" type="Runtime" />
+    </plugins>
+  </specFlow>
 </configuration>
