--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples.csproj
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples.csproj
@@ -34,8 +34,16 @@
       <HintPath>..\packages\SpecFlow.CustomPlugin.2.1.0\lib\net45\Gherkin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.SpecFlowPlugin, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.SpecFlowPlugin.0.0.1\lib\net452\Ghpr.SpecFlowPlugin.dll</HintPath>
+    <Reference Include="Ghpr.Core, Version=0.1.4.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.Core.0.1.4.2\lib\net452\Ghpr.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ghpr.SpecFlowPlugin, Version=0.0.1.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.SpecFlowPlugin.0.0.1.1\lib\net452\Ghpr.SpecFlowPlugin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
