mstest to nunit

--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
@@ -13,7 +13,7 @@
   </appSettings>
   <specFlow>
   <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <unitTestProvider name="MSTest" />
+    <unitTestProvider name="NUnit" />
     <plugins>
       <add name="Ghpr" type="Runtime" />
     </plugins>
