--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.ParallelExamples/Ghpr.SpecFlow.ParallelExamples.csproj
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.ParallelExamples/Ghpr.SpecFlow.ParallelExamples.csproj
@@ -38,8 +38,8 @@
       <HintPath>..\packages\Ghpr.Core.0.4.3\lib\net452\Ghpr.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.SpecFlowPlugin, Version=0.4.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.SpecFlowPlugin.0.4.2\lib\net452\Ghpr.SpecFlowPlugin.dll</HintPath>
+    <Reference Include="Ghpr.SpecFlowPlugin, Version=0.4.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.SpecFlowPlugin.0.4.3\lib\net452\Ghpr.SpecFlowPlugin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -104,9 +104,9 @@
       <LastGenOutput>Other1.feature.cs</LastGenOutput>
     </None>
     <None Include="Ghpr.Core.Settings.json" />
-    <None Include="Ghpr.SpecFlow.Settings.json">
+    <Content Include="Ghpr.SpecFlow.Settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
