--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples.csproj
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples.csproj
@@ -34,12 +34,12 @@
       <HintPath>..\packages\SpecFlow.CustomPlugin.2.1.0\lib\net45\Gherkin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.Core, Version=0.4.6.7, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.Core.0.4.6.7\lib\net452\Ghpr.Core.dll</HintPath>
+    <Reference Include="Ghpr.Core, Version=0.4.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.Core.0.4.7\lib\net452\Ghpr.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.SpecFlowPlugin, Version=0.4.6.7, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.SpecFlowPlugin.0.4.6.7\lib\net452\Ghpr.SpecFlowPlugin.dll</HintPath>
+    <Reference Include="Ghpr.SpecFlowPlugin, Version=0.4.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.SpecFlowPlugin.0.4.7\lib\net452\Ghpr.SpecFlowPlugin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -104,9 +104,9 @@
       <LastGenOutput>Other1.feature.cs</LastGenOutput>
     </None>
     <None Include="Ghpr.Core.Settings.json" />
-    <None Include="Ghpr.SpecFlow.Settings.json">
+    <Content Include="Ghpr.SpecFlow.Settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
