--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.ParallelExamples/App.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.ParallelExamples/App.config
@@ -3,14 +3,13 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
-  
   <specFlow>
-  
-    
     <plugins>
       <add name="Ghpr" type="Runtime" />
     </plugins>
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <unitTestProvider name="NUnit" />
+  </specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
