--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
@@ -5,7 +5,7 @@
   </configSections>
   <specFlow>
     <plugins>
-      <add name="Ghpr" type="Runtime" />
+      <add name="Ghpr.NUnit" type="Runtime" />
     </plugins>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <unitTestProvider name="NUnit" />
