--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.Examples/App.config
@@ -3,23 +3,23 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
-  <specFlow>
-    <plugins>
-      <add name="Ghpr.NUnit" type="Runtime" />
-    </plugins>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <unitTestProvider name="NUnit" />
-  </specFlow>
+  
+  
+  
+  
+  
+  
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.7.1.0" newVersion="3.7.1.0" />
-      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<specFlow>
+    <plugins>
+	  <add name="Ghpr.NUnit" type="Runtime" />
+    </plugins>
+  </specFlow></configuration>
