--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.MSTest.Examples/Ghpr.SpecFlow.MSTest.Examples.csproj
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.MSTest.Examples/Ghpr.SpecFlow.MSTest.Examples.csproj
@@ -38,16 +38,16 @@
       <HintPath>..\packages\Ghpr.Core.0.6.0\lib\net452\Ghpr.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.MSTest.SpecFlowPlugin, Version=0.5.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.MSTest.SpecFlowPlugin.0.5.9\lib\net452\Ghpr.MSTest.SpecFlowPlugin.dll</HintPath>
+    <Reference Include="Ghpr.MSTest.SpecFlowPlugin, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.MSTest.SpecFlowPlugin.0.6.0\lib\net452\Ghpr.MSTest.SpecFlowPlugin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.MSTest.TestContext.SpecFlowPlugin, Version=0.5.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.MSTest.TestContext.SpecFlowPlugin.0.5.9\lib\net452\Ghpr.MSTest.TestContext.SpecFlowPlugin.dll</HintPath>
+    <Reference Include="Ghpr.MSTest.TestContext.SpecFlowPlugin, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.MSTest.TestContext.SpecFlowPlugin.0.6.0\lib\net452\Ghpr.MSTest.TestContext.SpecFlowPlugin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ghpr.SpecFlow.Common, Version=0.5.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ghpr.SpecFlow.Common.0.5.9\lib\net452\Ghpr.SpecFlow.Common.dll</HintPath>
+    <Reference Include="Ghpr.SpecFlow.Common, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.SpecFlow.Common.0.6.0\lib\net452\Ghpr.SpecFlow.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -110,9 +110,7 @@
       <LastGenOutput>Other1.feature.cs</LastGenOutput>
     </None>
     <None Include="Ghpr.Core.Settings.json" />
-    <None Include="Ghpr.SpecFlow.Settings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Ghpr.SpecFlow.Settings.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
