--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.MSTest.Examples/App.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.MSTest.Examples/App.config
@@ -5,10 +5,12 @@
   </configSections>
   
   
+  
   <specFlow>
     
     <unitTestProvider name="MSTest" /><!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><plugins>
-	    <add name="Ghpr.MSTest.TestContext" type="Generator" /><add name="Ghpr.MSTest" type="Runtime" /></plugins></specFlow>
+	    <add name="Ghpr.MSTest.TestContext" type="Generator" />
+    <add name="Ghpr.MSTest" type="Runtime" /></plugins></specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
